# fonline

./: .hgignore  AUTHORS  CMakeLists.txt  README.md  copy-data.py  mingw32-linux.cmake  premake4.lua
CMake/: FindMYSQLPP.cmake
data/: FOnline.ini  Iface.cfg  server.ini
data/art/critters/: critters.fol
data/art/misc/: fnt_big_num.fnt  fnt_def.fnt  fnt_num.fnt  hex.frm  hexb.FRM  hexb1.FRM  tmapcirc.frm
data/art/splash/: dweller13.rix  params.txt
data/maps/: 100.map  21.map
data/objects/: 1301.st  210.st  23.st  all_obj.st  info_objects.txt  pic_use.txt
data/server/data/: start_location.txt  vars.txt
data/server/maps/: DESERT4.MAP  DESERT5.MAP  DESERT8.MAP  data_maps.txt  denbus1.map  denbus2.map  modmain.map
data/server/mob/: mobs_groups.txt  rat1.mob
data/server/npc/: Butcher_Smit.npc  CrazyMax.npc  Doctor_Livsi.npc  Fred.npc  Starik.npc  Trader_Djo.npc  barman_mo.npc  billy.npc  list_npc.npc
data/server/objects/: 10.st  2016.st  223.st  7001.st
data/server/scripts/: Script Commands.rtf  s1.fos  s2.fos  scripts.lst
data/text/: 101.dlg  102.dlg  103.dlg  104.dlg  105.dlg  106.dlg  107.dlg
inc/win32/: stdint.h
lib/freetype2/vs2008/x32/: INFO
lib/x32/debug/angelscript/: angelscript.lib
lib/x32/debug/libogg/: libogg.exp  (+2 more)
src/: CFileMngr.h  CHexField.cpp  CHexField.h  FEngine.cpp  FEngine.h  FOnline.dsp  FOnline.dsw  clean_up.bat  copyrights  datfile.cpp  getver.bat  keyb.cpp  keyb.h  readme.txt  resource.h  rs.aps  version.h
src/ACMDecompressor/: ACMDecompressor.cpp  ACMDecompressor.hpp  CMakeLists.txt
src/DatArchive/: CMakeLists.txt  DatArchive.hpp  datfile.cpp  datfile.hpp
src/DatArchive/cfile/: cfile.cpp  cfile.hpp
src/FOnlineClient/: CFileMngr.h  CFont.cpp  CFont.h  CHexField.cpp  CHexField.h  CSpriteManager.cpp  CSpriteManager.h  Critter.cpp  Critter.h  FEngine.cpp  FEngine.h  FEngine_Iface.cpp  SoundMngr.cpp  SoundMngr.h  commands.txt  common.cpp  common.h  copyrights.txt  frmload.h  keyb.cpp  keyb.h  main.cpp  netproto.h  resource.h  rs.rc  stdafx.h  version.h
src/FOnlineCommon/: CMakeLists.txt  Common.cpp  Common.hpp  ErrorHandling.cpp  ErrorHandling.hpp  buffer.cpp  buffer.hpp  fo-base.hpp
src/FOnlineCommon/math/: rect.hpp
src/FOnlineFileManager/: CMakeLists.txt  FileManager.cpp  FileManager.hpp
src/FOnlineMapEditor/: change.cpp  config.cpp  config.h  frame.cpp  frmset.cpp  lists.cpp  lists.h  main.cpp  map.h  mapp.h  mapper2.bpr  mapper2.res  mdi.cpp  mdi.dfm  mdi.h  msg.cpp  objset.cpp  pal.cpp  pal.h  pbar.h  pro.cpp  properts.cpp  properts.h
src/FOnlineMapEditor/graph/: Thumbs.db
src/FOnlineMapEditor/lib/: zlib10.lib
src/FOnlineNPCEditor/: Edit_nodeA.cpp  Edit_nodeA.h  Form1.resx  NPC_edit.cpp  NPC_edit.sln  NPC_edit.vcproj  ReadMe.txt  stdafx.cpp  stdafx.h
src/FOnlineServer/: CFileMngr.h  CMakeLists.txt  Critter.cpp  Critter.h  FOServ.h  FOserv.cpp  FOserv_cl.cpp  FOserv_map.cpp  FOserv_mob.cpp  FOserv_npc.cpp  FOserv_obj.cpp  FOserv_proc.cpp  FOserv_send.cpp  SQL.cpp  SQL.h  foserv.cfg  main.cpp  main.h  netproto.h  rs.rc  setup.txt  socials.cpp  socials.h  start.bat  stdafx.h
src/IniFile/: CMakeLists.txt  IniFile.cpp  IniFile.hpp
src/LZSS/: CMakeLists.txt  LZSS.cpp  LZSS.hpp
src/SimpleLeakDetector/: SimpleLeakDetector.cpp  SimpleLeakDetector.hpp
src/base/: buffer.cpp  buffer.hpp  fo-base.hpp  ini_file.cpp  ini_file.hpp  platform.cpp  platform.hpp
src/base/math/: rect.hpp
src/client/: BufMngr.cpp  BufMngr.h  CFileMngr.cpp  CFileMngr.h  CFont.cpp  CFont.h  CHexField.cpp  CHexField.h  CSpriteManager.cpp  CSpriteManager.h  Critter.cpp  Critter.h  FEngine.cpp  FEngine.h  FEngine_Iface.cpp  SoundMngr.cpp  SoundMngr.h  commands.txt  common.cpp  common.h  datfile.cpp  datfile.h  frmload.h  keyb.cpp  keyb.h  main.cpp  netproto.h  stdafx.h
src/client/cfile/: cfile.cpp  cfile.h
src/client/decomp_acm/: acmstrm.cpp  acmstrm.h
src/client/ogg/: ogg_static.lib  vorbis_static.lib  vorbisenc_static.lib  vorbisfile_static.lib
src/decomp_acm/: acmstrm.cpp
src/map-editor/: change.dfm  config.dfm  datfile.h  frame.h  frmset.h  macros.h  main.dfm  main.h  map.cpp  mapp.cpp  mapper2.cpp  msg.h  objset.h  pbar.dfm  pro.h  properts.dfm  proset.cpp  proset.h  script.cpp  script.h  tileset.cpp  tileset.h  utilites.cpp  utilites.h
src/npc-editor/: AssemblyInfo.cpp  Edit_node.cpp  Edit_node.h  Form1.h
src/server/: BufMngr.cpp  BufMngr.h  CFileMngr.cpp  CFileMngr.h  Critter.cpp  Critter.h  FOServ.h  FOserv.cpp  FOserv_cl.cpp  FOserv_map.cpp  FOserv_mob.cpp  FOserv_npc.cpp  FOserv_obj.cpp  FOserv_proc.cpp  FOserv_script.cpp  FOserv_send.cpp  MapMngr.cpp  SQL.cpp  SQL.h  datfile.h  libmySQL.lib  main.cpp  main.h  netproto.h  resource.h  rs.aps  rs.rc  setup.txt  socials.cpp  socials.h  stdafx.h  stop.bat
src/server/AngelScript/: angelscript.h  as_anyobject.cpp  as_anyobject.h  as_array.h  as_arrayobject.cpp  as_arrayobject.h  as_builder.cpp  as_builder.h  as_bytecode.cpp  as_bytecode.h  as_bytecodedef.h  as_c.cpp  as_callfunc.cpp  as_callfunc.h  as_callfunc_mips.cpp  as_callfunc_ppc.cpp  as_callfunc_sh4.cpp  as_callfunc_x86.cpp  as_compiler.cpp  as_compiler.h  as_config.h  as_configgroup.cpp  as_configgroup.h  as_context.cpp  as_context.h  as_datatype.cpp  as_datatype.h  as_debug.h  as_gcobject.cpp  as_gcobject.h  as_generic.cpp  as_generic.h  as_map.h  as_module.cpp  as_module.h  as_objecttype.cpp  as_objecttype.h  as_outputbuffer.cpp  as_outputbuffer.h  as_parser.cpp  (+29 more)
(+80 files in other folders)
